add get method
