# pb/api/user/v1/user-api.pb.validate.go
@@ -360,10 +360,11 @@ func (m *LoginRequest) validate(all bool) error {
 
 	var errors []error
 
-	if l := utf8.RuneCountInString(m.GetUsername()); l < 1 || l > 100 {
-		err := LoginRequestValidationError{
-			field:  "Username",
-			reason: "value length must be between 1 and 100 runes, inclusive",
+	if err := m._validateEmail(m.GetEmail()); err != nil {
+		err = LoginRequestValidationError{
+			field:  "Email",
+			reason: "value must be a valid email address",
+			cause:  err,
 		}
 		if !all {
 			return err
@@ -386,6 +387,56 @@ func (m *LoginRequest) validate(all bool) error {
 		return LoginRequestMultiError(errors)
 	}
 	return nil
+}
+
+func (m *LoginRequest) _validateHostname(host string) error {
+	s := strings.ToLower(strings.TrimSuffix(host, "."))
+
+	if len(host) > 253 {
+		return errors.New("hostname cannot exceed 253 characters")
+	}
+
+	for _, part := range strings.Split(s, ".") {
+		if l := len(part); l == 0 || l > 63 {
+			return errors.New("hostname part must be non-empty and cannot exceed 63 characters")
+		}
+
+		if part[0] == '-' {
+			return errors.New("hostname parts cannot begin with hyphens")
+		}
+
+		if part[len(part)-1] == '-' {
+			return errors.New("hostname parts cannot end with hyphens")
+		}
+
+		for _, r := range part {
+			if (r < 'a' || r > 'z') && (r < '0' || r > '9') && r != '-' {
+				return fmt.Errorf("hostname parts can only contain alphanumeric characters or hyphens, got %q", string(r))
+			}
+		}
+	}
+
+	return nil
+}
+
+func (m *LoginRequest) _validateEmail(addr string) error {
+	a, err := mail.ParseAddress(addr)
+	if err != nil {
+		return err
+	}
+	addr = a.Address
+
+	if len(addr) > 254 {
+		return errors.New("email addresses cannot exceed 254 characters")
+	}
+
+	parts := strings.SplitN(addr, "@", 2)
+
+	if len(parts[0]) > 64 {
+		return errors.New("email address local phrase cannot exceed 64 characters")
+	}
+
+	return m._validateHostname(parts[1])
 }
 
 // LoginRequestMultiError is an error wrapping multiple validation errors
@@ -639,17 +690,6 @@ func (m *CreateUserRequest) validate(all bool) error {
 		errors = append(errors, err)
 	}
 
-	if l := utf8.RuneCountInString(m.GetUsername()); l < 1 || l > 100 {
-		err := CreateUserRequestValidationError{
-			field:  "Username",
-			reason: "value length must be between 1 and 100 runes, inclusive",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
 	if len(errors) > 0 {
 		return CreateUserRequestMultiError(errors)
 	}
@@ -812,8 +852,6 @@ func (m *CreateUserResponse) validate(all bool) error {
 	// no validation rules for Phone
 
 	// no validation rules for Email
-
-	// no validation rules for Username
 
 	if len(errors) > 0 {
 		return CreateUserResponseMultiError(errors)
